--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   appwrite: ^9.0.0
+  shared_preferences: ^2.1.2
+  flutter_svg: ^2.0.6
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +58,7 @@ flutter:
   
   uses-material-design: true
   assets:
+    - assets/svgs/
     - assets/fonts/
   fonts:
     - family: Poppins
