--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   appwrite: ^9.0.0
   shared_preferences: ^2.1.2
   flutter_svg: ^2.0.6
+  normie: ^1.0.0
 
 dev_dependencies:
   flutter_test:
