--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   shared_preferences: ^2.1.2
   flutter_svg: ^2.0.6
   normie: ^1.0.0
+  hive: ^2.2.3
+  build_runner: ^2.4.5
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.0
 
 dev_dependencies:
   flutter_test:
