--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   build_runner: ^2.4.5
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.0
+  # connectivity_plus: ^4.0.1
 
 dev_dependencies:
   flutter_test:
