--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,10 @@ dependencies:
   build_runner: ^2.4.5
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.0
-  # connectivity_plus: ^4.0.1
+  connectivity_plus: ^3.0.6
+  provider: ^6.0.5
+  flutter_provider: ^2.1.0
+  dart_appwrite: ^8.0.1
 
 dev_dependencies:
   flutter_test:
